added function to hide start screen and display questions

--- a/index.html
+++ b/index.html
@@ -4,16 +4,34 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Coding Quiz Challenge</title>
+    <link rel="stylesheet" href="assets/cs/styles.css" />
+    <title>Coding Quiz</title>
   </head>
   <body>
-    <h1>Coding Quiz Challenge</h1>
-    <p>
-      Try to answer the following code-related questions within the time limit.
-      Keep in mind that incorrect answers will penalize your score/time by ten
-      seconds!
-    </p>
-    <script src="./assets/js/script.js"></script>
+    <div class="container">
+      <div id="start-screen">
+        <h2>Coding Quiz Challenge</h2>
+        <h4>
+          Try to answer the following code-related questions within the time
+          limit. Keep in mind that incorrect answers will penalize your
+          score/time by ten seconds!
+        </h4>
+      </div>
+
+      <div id="question-container" class="hide">
+        <div id="question">Question</div>
+        <div id="answer-buttons" class="btn-grid">
+          <button class="btn">Answer 1</button>
+          <button class="btn">Answer 2</button>
+          <button class="btn">Answer 3</button>
+          <button class="btn">Answer 4</button>
+        </div>
+      </div>
+      <div class="controls">
+        <button id="start-btn" class="start-btn btn">Start</button>
+        <button id="next-btn" class="next-btn btn hide">Next</button>
+      </div>
+    </div>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
