--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
       <div id="start-screen">
         <h2>Coding Quiz Challenge</h2>
+        <h3 id="countdown"></h3>
         <h4>
           Try to answer the following code-related questions within the time
           limit. Keep in mind that incorrect answers will penalize your
