added scores and endgame function

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <title>Coding Quiz</title>
   </head>
   <body>
+   
     <div class="container">
+      <h3 class="countdown"></h3>
       <div id="start-screen">
         <h2>Coding Quiz Challenge</h2>
-        <h3 id="countdown"></h3>
         <h4>
           Try to answer the following code-related questions within the time
           limit. Keep in mind that incorrect answers will penalize your
