added refresh button to restart game

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <div class="controls">
         <button id="start-btn" class="start-btn btn">Start</button>
         <button id="next-btn" class="next-btn btn hide">Next</button>
+        <button id="btn-refresh" class="refresh-button btn hide" onclick="location.reload()">Restart</button>
       </div>
     </div>
     <script src="assets/js/script.js"></script>
