added proper html syntax

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <div class="container">
       <h3 class="countdown"></h3>
       <div id="start-screen">
-        <h2>Coding Quiz Challenge</h2>
-        <h4>
+        <div class="header">Coding Quiz Challenge</div>
+        <div class="body">
           Try to answer the following code-related questions within the time
           limit. Keep in mind that incorrect answers will penalize your
           score/time by ten seconds!
-        </h4>
+        </div>
       </div>
 
       <div id="question-container" class="hide">
